# CNNs-from-scratch

./: CMakeLists.txt
csrc/: activation.c  activations.h  conv2d.c  matmul.c  matmul.h  tensor.c  tensor.h
csrc/c_tests/: tensor_tests.c
python/: bridge.py  layers.py  loss.py  model.py
tests/: matmul_bridge_test.py
